package ar.edu.utn.frc.tup.lciii.models;

public interface Play { // se crea vacia para que todos los que implementen esta interface sean de tipoPlay
}
