@startuml
class Player{
    Long id
    Strintg userName
    String password
    String email
    String avatar
    LocalDateTime lastLogin
}

class Game{
    Long id
    String code
    String userName
    String description
    String rules
}
'tengo que declararla abstracta a match
abstract class  Match{
Long id;
Game game;
Player player;
LocalDateTime createDate;
MatchStatus status;
}

class MatchRps{
Integer numberOfPlays
Integer remainderPlays
Integer player1Score
Integer player2Score
List<PlayRps> plays
 Long winnerId
}

interface Play{

}

class PlayRps{
 Long id
 Long matchRpsId
 ShapeHand shapeHandPlayer1
 ShapeHand shapeHandPlayer2
 Long winnerId
}

enum ShapeHand{
 ROCK
 PAPER
 SCISSORS
}

enum MatchStatus{
    STARTED
    FINISHED
    CANCELED
}

'no me muestra que lleva la clase play


MatchStatus --*Match
Game --*Match
Player--* Match
Match <|--MatchRps
MatchRps*--PlayRps
PlayRps *-l-ShapeHand
PlayRps -r-|> Play



@enduml